[B]Advanced Emulator Launcher | version 0.9.1 | xx February 2017[/B]

WIP      Scan Software Lists.

WIP      Launch machines with software lists.


[B]Advanced Emulator Launcher | version 0.9.0 | 15 January 2017[/B]

FEATURE  Extract MAME.xml from MAME executable. Tested only on Linux.

FEATURE  Generate main MAME machine database, indices and catalogs from MAME.xml.

FEATURE  Scan ROMs and tell the user about Have/Missing ROMs.

FEATURE  Launch MAME non-Software List (arcade) machines.

WIP      Scan CHDs and samples.

WIP      Scan assets and build assets database.

WIP      Build Software List catalog.